Исправлены магические числа в тестах (вынесены в константы)